--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=goleadores
+
+# Puerto del servidor (modificado para evitar conflicto con otro servicio)
+server.port=8081
+
+# Configuración de H2
+spring.datasource.url=jdbc:h2:mem:goleadoresdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Mostrar consola H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configuración de JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging (opcional)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
